# testpast

./: .env  main.py  pizzas.db  pyproject.toml
data/: associete.py  base.py  functions.py  models.py  woda.py
templates/: base.html  index.html  navigation.html  poll.html  results.html
