[tool.poetry]
name = "testpast"
version = "0.1.0"
description = ""
authors = ["czolowek <klutoi39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
